[package]
name = "fproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.58"
dashmap = "5.4.0"
env_logger = "0.10.0"
futures = "0.3.25"
log = { version = "0.4.17", features = ["kv_unstable", "kv_unstable_serde"] }
notify = { version = "5.0.0", features = ["serde"] }
once_cell = "1.17.1"
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
socket2 = { version = "0.5.1", features = ["all"] }
thiserror = "1.0.39"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
trust-dns-resolver = "0.22.0"
typed-builder = "0.14.0"
